# ocr_practice

./: .~lock.ocr_test.odt#  CMakeLists.txt  README.md  easy_ocr.py  image.cpp  ocr_test.odt  video copy.cpp  video.cpp
